// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create an event with all fields 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "event": Object {
        "admissionFee": 10,
        "admissionFeeWithDiscount": 4,
        "amountOfFloors": 3,
        "club": Object {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": "event-description",
        "genres": Array [
          Object {
            "id": 1,
            "name": "genre1",
          },
          Object {
            "id": 2,
            "name": "genre2",
          },
        ],
        "id": 2,
        "imageUrl": null,
        "minimumAge": 18,
        "name": "event-name",
        "priceCategory": 2,
        "special": "event-special",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create an event with empty genres 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "event": Object {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": Object {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": null,
        "genres": Array [],
        "id": 2,
        "imageUrl": null,
        "minimumAge": null,
        "name": "event-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create an event with only required information 1`] = `
Object {
  "data": Object {
    "createEvent": Object {
      "event": Object {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": Object {
          "id": 1,
          "name": "name",
        },
        "date": "event-date",
        "description": null,
        "genres": Array [],
        "id": 2,
        "imageUrl": null,
        "minimumAge": null,
        "name": "event-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create club with all information 1`] = `
Object {
  "data": Object {
    "createClub": Object {
      "club": Object {
        "address": "address",
        "contact": "contact",
        "description": "description",
        "email": "email",
        "id": 3,
        "link": "link",
        "name": "test",
        "region": "region",
        "specials": "speicals",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`create club with only required information 1`] = `
Object {
  "data": Object {
    "createClub": Object {
      "club": Object {
        "address": null,
        "contact": null,
        "description": null,
        "email": null,
        "id": 3,
        "link": null,
        "name": "test",
        "region": null,
        "specials": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`update all fields of an event 1`] = `
Object {
  "data": Object {
    "updateEvent": Object {
      "event": Object {
        "admissionFee": 20,
        "admissionFeeWithDiscount": 3,
        "amountOfFloors": 2,
        "club": Object {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": "updated-description",
        "genres": Array [
          Object {
            "id": 2,
            "name": "genre2",
          },
          Object {
            "id": 3,
            "name": "genre3",
          },
        ],
        "id": 1,
        "imageUrl": "imageUrl",
        "minimumAge": 16,
        "name": "updated-name",
        "priceCategory": 1,
        "special": "updated-special",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`update an event to only have required fields 1`] = `
Object {
  "data": Object {
    "updateEvent": Object {
      "event": Object {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": Object {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": null,
        "genres": Array [],
        "id": 1,
        "imageUrl": "imageUrl",
        "minimumAge": null,
        "name": "updated-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`update an event with empty genre list 1`] = `
Object {
  "data": Object {
    "updateEvent": Object {
      "event": Object {
        "admissionFee": null,
        "admissionFeeWithDiscount": null,
        "amountOfFloors": null,
        "club": Object {
          "id": 2,
          "name": "name",
        },
        "date": "updated-date",
        "description": null,
        "genres": Array [],
        "id": 1,
        "imageUrl": "imageUrl",
        "minimumAge": null,
        "name": "updated-name",
        "priceCategory": null,
        "special": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`update club with all information 1`] = `
Object {
  "data": Object {
    "updateClub": Object {
      "club": Object {
        "address": "updated-address",
        "contact": "updated-contact",
        "description": "updated-description",
        "email": "updated-email",
        "id": 1,
        "link": "updated-link",
        "name": "updated-test",
        "region": "updated-region",
        "specials": "updated-speicals",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`update club with only required information 1`] = `
Object {
  "data": Object {
    "updateClub": Object {
      "club": Object {
        "address": null,
        "contact": null,
        "description": null,
        "email": null,
        "id": 1,
        "link": null,
        "name": "updated-name",
        "region": null,
        "specials": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
